Modificamos el nombre de titulos que no lo reconocia

--- a/jugadores.html
+++ b/jugadores.html
@@ -31,7 +31,7 @@
        <a class="nav-link" href="jugadores.html">Jugadores</a>
      </li>
      <li class="nav-item">
-      <a class="nav-link" href="Títulos.html">Títulos</a>
+      <a class="nav-link" href="titulos.html">Títulos</a>
      </li>
      <li class="nav-item">
       <a class="nav-link" href="imagenes.html">Imágenes</a>
